--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -10,7 +10,7 @@
 */
 
 p#GoogleFonts1 {
-    font-family: "Rubik Dirt", system-ui;
+  font-family: "Rubik Dirt", system-ui;
   font-weight: 400;
   font-style: normal;
   font-size: 200%;
@@ -19,10 +19,10 @@ p#GoogleFonts1 {
 
   p#GoogleFonts2 {
     font-family: "Mystery Quest", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 200%;
-  text-indent: 0px;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 200%;
+    text-indent: 0px;
   }
 
   p#GoogleFonts3 {
@@ -156,22 +156,27 @@ main p{
  nav{
     background-color:var(--cor5)    
 }
+
+
  main a{    
-        text-decoration: none;
-        color: white;
-        font-size:medium;
-        font-weight: 700;
-        padding-right: 15px;
-        margin-right: 15px;
-        
+    text-decoration: none;
+    color: white;
+    font-size:medium;
+    font-weight: 700;
+    padding-right: 15px;
+    margin-right: 15px;
+    transition: .35;
+    cursor: pointer ;        
 }
 
-main a:hover    {    
-    text-decoration: underline;
-    color: var(--cor5);
-    background-color: var(--cor2);
-    
+main a:hover :not(:hover){    
+    text-decoration: underline;    
+    background-color: var(--cor1);
+    opacity: 4;
+    transform: scale(0.9);
 }
+
+
 
 main img {
     width: 56%;
